# department-810b

./: .gitignore  README.md
docs/: CNAME  index.html  index.md
java/: README.md
java/l4_dev/lession4/: pom.xml
java/lab6/lession7/: pom.xml
java/lession4_examples (1)/lession4/: pom.xml
java/task_01/: pom.xml
java/task_02/: pom.xml
java/task_03/: pom.xml
java/task_05/: 1491927925.data  1491927925.gzip  pom.xml
oracle_db/: README.md  analytics.sql  make_star_scheme.sql  oltp_test.sql  query11.sql  task_01.sql  task_02.sql
oracle_db/make/: lsi.ddl
oracle_db/task_03/: so_ddl_script.sql
parallel_cpp/: README.md  task_02.md
parallel_cpp/2 lab/: CMakeLists.txt  Config.cpp  Config.h  README.md  input.json  lesson.txt  main.cpp  output.json  vector.cpp  vector.h
parallel_cpp/course_work/1/: CMakeLists.txt  input.json  main.cpp  optimizator.cpp  optimizator.h  output.json
parallel_cpp/course_work/work_01/: CMakeLists.txt  input.json  lesson.txt  main.cpp  material.xyz  optimizator.cpp  optimizator.h  output.json  plot_enrgy.py  struct.h  vector.cpp  vector.h
parallel_cpp/work_01/: CMakeLists.txt  main.cpp  vector.cpp
parallel_cpp/work_02/: CMakeLists.txt  SystemConfiguration.cpp  SystemConfiguration.h  input.data  main.cpp  output.data  vector.cpp  vector.h
scala/task_01/: build.sbt
scala/task_02/: build.sbt
scala/task_04/: pom.xml  stackOverflowDB.trace.db
unity/Arkanoid/: Arkanoid.userprefs  Arkanoid2D-csharp.sln  Arkanoid2D.sln  Arkanoid2D.userprefs  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj
(+112 files in other folders)
